Update Analysis of growth form and leaf traits.Rmd

--- a/Analysis of growth form and leaf traits.Rmd
+++ b/Analysis of growth form and leaf traits.Rmd
@@ -9,20 +9,25 @@ Libraries required
 
 ```{r}
 library(dplyr)
+library(ggplot2)
+library(sf)
+library(rnaturalearth)
+library(rnaturalearthdata)
+library(austraits)
 ```
 
 Read in relevant data
 
 ```{r}
 growthformdata <- read.csv("growthform.csv")
-leaftraitdata <- read.csv("leafdatafull.csv")
+leaftraitdata <- read.csv("leafdatafullfinal.csv")
 ```
 
 Stitch these two dataframes together and clean so that we have a dataframe that is just the log response ratios of each leaf trait for each species and their growth form. Also mutate a column for the mean trait change and the absolute mean trait change for the linear regression of this variable against growth form
 
 ```{r}
 traitchangeandgrowthformdata <- left_join(growthformdata, leaftraitdata, by = "Species") %>%
-  select(Species, growthform, thickLRR, lmaLRR, marginLRR, dimensionsLRR, stomataLRR, areaLRR, photoLRR, nitrogenLRR, WUELRR) %>%
+  select(Species, growthform, Lat, Lon, thickLRR, lmaLRR, marginLRR, dimensionsLRR, stomataLRR, areaLRR, photoLRR, nitrogenLRR, WUELRR) %>%
   mutate(averagetraitchange = rowMeans(.[,c("thickLRR", "lmaLRR", "marginLRR", "dimensionsLRR", "stomataLRR", "areaLRR", "photoLRR", "nitrogenLRR", "WUELRR")], na.rm=T)) %>% #making an average trait change
   mutate(absoluteaveragetraitchange = abs(averagetraitchange)) %>% #and making an ABSOLUTE average trait change
   filter(!is.na(averagetraitchange)) #removing the species that had no data at all in this study - they may have been germinated and used in previous studies (e.g. Everingham et al 2021, Time travelling seeds reveal that plant regeneration and growth traits are responding to climate change, ECOLOGY, 2021)
@@ -32,7 +37,7 @@ traitchangeandgrowthformdata <- left_join(growthformdata, leaftraitdata, by = "S
 Now running an analyis of growth form against average leaf trait change
 
 ```{r}
-growthformlm <- lm(log(absoluteaveragetraitchange) ~ growthform, data = traitchangeandgrowthformdata) #absolute trait change is logged because of non-normally distributed data
+growthformlm <- lm(log(absoluteaveragetraitchange) ~ as.factor(growthform), data = traitchangeandgrowthformdata) #absolute trait change is logged because of non-normally distributed data
 summary(growthformlm)
 ```
 
@@ -40,7 +45,6 @@ Creating a map of our species with growth form and absolute change mapped onto t
 
 
 First constructing australian map as the background canvas of the map
-
 ```{r}
 world <- ne_countries(scale = "medium", returnclass = "sf")
 
@@ -68,9 +72,7 @@ ausplotzoomed <- ggplot(data = world) +
   coord_sf(xlim = c(131, 155), ylim = c(-45, -25), expand = FALSE)
 ausplotzoomed
 ```
-
 ### Then constructing Australian map with sites
-
 ```{r, warning=FALSE}
 LeafChapterMapwithspecies <- ausplotzoomed +
   geom_point(data = traitchangeandgrowthformdata, aes(x= `Lon`, y = `Lat`, color = growthform, shape = growthform, size = (absoluteaveragetraitchange)), alpha = 0.8) +
@@ -93,22 +95,7 @@ ggsave(
 )
 ```
 
-The editor of ecology and evolution also asked if our growth form analysis can consider generation time to determine if generation time has an impact on the amount of change a species can have- I believe there is limited data on generation time specifically but have a dataset from TRY of generation time
-
-```{r}
-generationtimeTRY <- read.delim("30063.txt") %>%
-  rename(Species = SpeciesName)
-
-generationtimeourspecies <- left_join(traitchangeandgrowthformdata, generationtimeTRY, by = "Species") %>%
-  select(Species, OrigValueStr)
-```
-
-From looking at this dataset we can see we only have data on nine species: Bothriochloa macra, Senecio garlandii, Vittadinia cuneata (all herbs with <1 year to repro maturity), Allocasuarina nana, Melaleuca quinquenervia, Eucalyptus obliqua, Acacia baileyana, Allocasuarina littoralis and Acacia dealbata
-<br>
-Likewise, this data is not so accurate with many "X-Xyears" or "<Xyears" in these nine species - not that clear to use
-
-
-Let's also try Austraits
+The editor of ecology and evolution also asked if our growth form analysis can consider generation time to determine if generation time has an impact on the amount of change a species can have- I believe there is limited data on generation time specifically but have a dataset from Austraits of generation time
 
 ```{r}
 # load austraits
@@ -117,7 +104,7 @@ austraits <- load_austraits(version = "5.0.0", path = "data/austraits", update =
 # find traits for generation time or maturity or life span
 lookup_trait(austraits, "matur") %>% head() #swap "matur" with lifespan or repro or otherwise
 
-# from a quick look we can use "reproductive_maturity" and "lifespan"
+# from a quick look we can use "reproductive_maturity" and "lifespan" - these are the closest available data to generation time
 # pull these traits from aus traits
 data_repro_matur <- extract_trait(austraits, "reproductive_maturity") 
 data_lifespan <- extract_trait(austraits, "lifespan")
@@ -136,15 +123,31 @@ austraits_our_data <- left_join(traitchangeandgrowthformdata, data_repro_matur, 
             mean_lifespan = mean(value.y, na.rm = T)) %>%
   mutate(Reference = "AusTraits")
 
-#so there are some more data from austraits but only 13 species
+# only 13 species out of 32 for reproductive maturity data
 ```
 
-Now we combine what data we have from austraits, supplemented with any extra trait measures from TRY and run the same analyses to see if it impacts the amount of trait change
+Let's also try TRY
+```{r}
+generationtimeTRY <- read.delim("30063.txt") %>%
+  rename(Species = SpeciesName)
 
+generationtimeourspecies <- left_join(traitchangeandgrowthformdata, generationtimeTRY, by = "Species") %>%
+  select(Species, OrigValueStr)
+```
+
+From looking at this dataset we can see we only have data on nine species (which we already gained from AusTraits anyway): Bothriochloa macra, Senecio garlandii, Vittadinia cuneata (all herbs with <1 year to repro maturity), Allocasuarina nana, Melaleuca quinquenervia, Eucalyptus obliqua, Acacia baileyana, Allocasuarina littoralis and Acacia dealbata
+
+<br>
+
+Likewise, this data is not so accurate with many "X-Xyears" or "<Xyears" in these nine species - not that clarifying to use - sticking to just AusTraits
+
+Combine our data
 ```{r}
 repro_maturity_full <- left_join(traitchangeandgrowthformdata, austraits_our_data, by = "Species") %>%
   mutate(mean_repro_maturity = ifelse(Species == "Vittadinia cuneata", 1, mean_repro_maturity)) %>%
-  mutate(Reference = ifelse(Species == "Vittadinia cuneata", "TRY", Reference)) #only extra measure from try is this one vittadinia species
+  mutate(Reference = ifelse(Species == "Vittadinia cuneata", "NSW FIRE ECOLOGY", Reference)) %>% # one extra measure from another database is this one vittadinia species
+  mutate(mean_repro_maturity = ifelse(Species == "Acacia brachybotrya", 3.5, mean_repro_maturity)) %>%
+  mutate(Reference = ifelse(Species == "Acacia brachybotrya", "Ross Bradstock pers. comms.", Reference)) # one extra measure from personal communication with Prod Ross Bradstock is this one Acacia species
 ```
 
 Now run regression
@@ -152,5 +155,13 @@ Now run regression
 repro_maturity_trait_change <- lm(log(absoluteaveragetraitchange) ~ log(mean_repro_maturity), data = repro_maturity_full)
 summary(repro_maturity_trait_change)
 #still not significant - but not many measurements - and relationship (R squared) not strong either - no pattern
+```
+
+Also regress mean lifespan against trait change - as there is some data for species here not overlapping with time to reproductive maturity
+
+```{r}
+lifespan_trait_change <- lm(log(absoluteaveragetraitchange) ~ log(mean_lifespan), data = repro_maturity_full)
+summary(lifespan_trait_change)
+#also not significant - but not many measurements - and relationship (R squared) not strong either - no pattern
 ```
 
